--- a/views/aboutme.ejs
+++ b/views/aboutme.ejs
@@ -29,15 +29,24 @@
             <div class="row">
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav">
-                        <a href="./index" class=" color_change nav-item nav-link active">Home</a>
+                        <a href="./" class=" color_change nav-item nav-link active">Home</a>
                         <a href="#" class="nav-item nav-link">|</a>
-                        <a href="./Recipe" class="nav-item nav-link">Add Recipe</a>
+                        <% if(isAuthenticated) { %>
+                            <a href="./Recipe" class="nav-item nav-link">Add Recipe</a>
+                        <%} else { %>
+                        <% } %>
                         <a href="#" class="nav-item nav-link">|</a>
                         <a href="./aboutme" class="nav-item nav-link">About Me</a>
                         <a href="#" class="nav-item nav-link">|</a>
-                        <a href="./Registration" class="nav-item nav-link signup">Sign Up</a>
-                        <form class="d-flex form-right">
-                            <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search">
+                        <!--                            <a href="./Registration" class="nav-item nav-link signup">Sign Up</a>-->
+                        <% if(!isAuthenticated) { %>
+                            <a href="./login" class="nav-item nav-link signup">Log In</a>
+                        <% } else { %>
+                            <a href="./logout" class="nav-item nav-link signup">Log Out</a>
+                        <% } %>
+
+                        <form class="d-flex">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-success" type="submit">Search</button>
                         </form>
                     </div>
