--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -43,6 +43,11 @@
                 </div>
                 <br>
                 <div class="form-group">
+                    <label for="addIngredient"> Ingredients </label>
+                    <input type="text" name="ingredient"  required class="form-control" value="<%=recipe.ingredient%>">
+                </div>
+                <br>
+                <div class="form-group">
                     <label for="time"> Time </label>
                     <input type="text" name="time" required class="form-control" value="<%=recipe.time%>">
                 </div>
